# zksync-web3-rs

./: .gitignore  Cargo.toml  Makefile  README.md  envrc.example  main.py
.github/workflows/: build-check-test.yaml  ci.yaml  crates-io.yaml
abi/: Bridgehub.json  IBridgehub.json  IContractDeployer.json  IGovernance.json  IL1Bridge.json  IL1ERC20Bridge.json  IL1Messenger.json  IL1SharedBridge.json  IL2Bridge.json  IPaymasterFlow.json  IStateTransitionManager.json  ITestnetERC20Token.json  IZkSyncStateTransition.json  StateTransitionManager.json
abi/test_contracts/: import_combined.json
examples/contract-deployment/: main.rs
examples/paymaster/: main.rs
examples/simple_payment/: main.rs
resources/abi/: IZkSync.json
resources/testing/erc20/: ERC20Token.json  MyToken.json  abi.json
solidity/: combined.json
src/: deposit.rs  lib.rs  main.rs  test_utils.rs  transfer.rs  types.rs  utils.rs  withdraw.rs  zk_middleware.rs  zk_wallet.rs  zks_utils.rs
src/abi/: ContractDeployer.json  IL1Bridge.json  mod.rs
src/abi/test_contracts/: basic_combined.json  counter_combined.json  greeter_combined.json  storage_combined.json
src/cli/: mod.rs
src/cli/commands/: account_balance.rs  call.rs  compile.rs  deploy.rs  get_contract.rs  get_transaction.rs  mod.rs  pay.rs
src/compile/: constants.rs  mod.rs  output.rs  project.rs  traits.rs
src/compile/test_contracts/: Test.sol
src/compile/test_contracts/storage/src/: ValueStorage.sol
src/compile/test_contracts/test/src/: Storage.sol  Test.sol
src/contracts/: bridgehub.rs  erc20.rs  governance.rs  l1_bridge_contract.rs  l1_shared_bridge.rs  l2_eth.rs  l2_shared_bridge.rs  main_contract.rs  mod.rs  state_transition_manager.rs
src/deposit/: constants.rs  mod.rs  utils.rs
src/eip712/: eip712_sign_input.rs  eip712_transaction_request.rs  meta.rs  mod.rs  paymaster_params.rs  sign_input.rs  transaction.rs  transaction_request.rs  transaction_request_builder.rs  utils.rs
src/tests/: mod.rs  provider_tests.rs  utils.rs  wallet_tests.rs
src/zks_build/: mod.rs  zksolc.rs  zksolc_manager.rs
src/zks_provider/: mod.rs  types.rs
src/zks_provider/types/: fee.rs  mod.rs
src/zks_signer/: mod.rs
src/zks_wallet/: DepositERC20GasLimit.json  errors.rs  mod.rs  wallet.rs
src/zks_wallet/requests/: call_request.rs  deploy_request.rs  deposit_request.rs  mod.rs  transfer_request.rs  withdraw_request.rs
src/zks_wallet/wallet/: deposit_request.rs
tests/: deploy.rs  deposit.rs  l2_shared_bridge.rs  lib.rs  provider_tests.rs  utils.rs  wallet_tests.rs  withdraw.rs  zk_middleware_tests.rs
tests/common/: mod.rs
