[package]
name = "zksync-web3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["rustls", "ethers-solc"] }
ethers-solc = { version = "2.0.4", features = ["rustls", "svm-solc"] }

clap = { version = "4.2.7", features = ["derive"] }

reqwest = {version = "0.11.8", default-features = false, features = [
  "json",
  "rustls",
  "rustls-native-certs",
]}
ansi_term = "0.12.1"
anyhow = {version = "1.0.70"}
dirs = {version = "5.0.0"}
url = "2.3.1"
semver = "1.0.5"

# Async
tokio = { version = "1", features = ["macros", "process"] }
async-trait = "0.1.68"

# Serialization
serde = {version = "1.0.163", features = ["derive"] }
serde_json = { version = "1" }
hex = "0.4"

# Error handling
eyre = "0.6" # CLI error handling
thiserror = "1.0.40" # Library error handling

# Logging
log = "0.4"
env_logger = "0.10"

# Hash
sha2 = "0.9.5"

# Examples

[[example]]
name = "simple_payment"
path = "examples/simple_payment/main.rs"
