[package]
name = "zksync-ethers-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for zkSync Era"
repository = "https://github.com/lambdaclass/zksync-ethers-rs/"
homepage = "https://github.com/lambdaclass/zksync-ethers-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["rustls"] }
ethers-contract = "2.0.7"
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"

# ZKsync
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", tag = "core-v24.7.0", package = "zksync_types" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", tag = "core-v24.7.0", package = "zksync_web3_decl" }
zksync_system_constants = { git = "https://github.com/matter-labs/zksync-era.git", tag = "core-v24.7.0", package = "zksync_system_constants" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era.git", tag = "core-v24.7.0", package = "zksync_contracts" }

# Async
tokio = { version = "1", features = ["macros", "process"] }
async-trait = "0.1.68"

# Serialization
serde = "1.0.163"
serde_json = { version = "1" }
hex = "0.4"

# Error handling
thiserror = "1.0.40" # Library error handling

# Logging
log = "0.4"
env_logger = "0.11.3"

# Hash
sha2 = "0.10.8"

[features]
ethers-solc = ["ethers/ethers-solc"]

[dev-dependencies]
colored = "2.1.0"

# Examples

#[[example]]
#name = "simple_payment"
#path = "examples/simple_payment/main.rs"

[profile.test]
opt-level = 3
debug-assertions = true
