[package]
name = "zksync-web3-rs"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for zkSync Era"
repository = "https://github.com/lambdaclass/zksync-web3-rs/"
homepage = "https://github.com/lambdaclass/zksync-web3-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["rustls"] }
ethers-contract = "2.0.7"
clap = { version = "4.2.7", features = ["derive"] }
lazy_static = "1.4.0"

# Async
tokio = { version = "1", features = ["macros", "process"] }
async-trait = "0.1.68"

# Serialization
serde = "1.0.163"
serde_json = { version = "1" }
hex = "0.4"

# Error handling
thiserror = "1.0.40" # Library error handling

# Logging
log = "0.4"
env_logger = "0.10"

# Hash
sha2 = "0.9.5"
anyhow = "1.0.88"

[features]
ethers-solc = ["ethers/ethers-solc"]

# Examples

[[example]]
name = "simple_payment"
path = "examples/simple_payment/main.rs"

[profile.test]
opt-level = 3
debug-assertions = true
